--- a/20191121/todoApp_react/package.json
+++ b/20191121/todoApp_react/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
